# Resource-Management-Tools

./: .gitmodules  CMakeLists.txt  LICENSE  Workspace.code-workspace
AssetsPacked/: resources.pack
PackReader/: CMakeLists.txt
PackReader/inc/: pack_reader.hpp
PackReader/src/: pack_reader.cpp
ResPackingCommon/: CMakeLists.txt  documentation.txt  file_structure.txt
ResPackingCommon/inc/: pack_entry.hpp  pack_meta_lengths.hpp  res_pack_signature.hpp  resource_table_entry.hpp
ResPackingCommon/src/: res_pack_signature.cpp
ResourcePacker/: CMakeLists.txt  Schematics.drawio  todo.txt
ResourcePacker/ResPacker/: CMakeLists.txt
ResourcePacker/ResPacker/common/: config.hpp  null_idx.hpp
ResourcePacker/ResPacker/header_files/: main_frame.hpp
ResourcePacker/ResPacker/header_files/controls/: icontrol_initializer.hpp  res_access_path_choices_controls.hpp  res_table_buttons_controls.hpp  res_table_controls.hpp
ResourcePacker/ResPacker/header_files/packing/: pack_manager.hpp
ResourcePacker/ResPacker/src/: app.cpp
ResourcePacker/ResPacker/src/controls/: main_panel.cpp  output_dir_controls.cpp  packing_choices_controls.cpp  res_table_controls.cpp
ResourcePacker/common/: config.hpp  custom_events.hpp  enums.hpp  resource_types.hpp
ResourcePacker/header_files/controls/: access_name_choices_controls.hpp  custom_events.hpp  main_panel.hpp  output_dir_controls.hpp  pack_file_name_controls.hpp  packing_choices_controls.hpp  res_table_buttons_controls.hpp  res_table_controls.hpp
ResourcePacker/header_files/controls/classes/: list_row.hpp  resource_entry.hpp
ResourcePacker/header_files/packing/: pack_maker.hpp  pack_manager.hpp  pack_parameters.hpp  packing_data.hpp  packing_parameters.hpp  resource_file_entry.hpp
ResourcePacker/src/: app.cpp  main_frame.cpp
ResourcePacker/src/controls/: access_name_choices_controls.cpp  main_panel.cpp  output_dir_controls.cpp  pack_file_name_controls.cpp  packing_choices_controls.cpp  res_access_path_choices_controls.cpp  res_table_buttons_controls.cpp  res_table_controls.cpp
ResourcePacker/src/controls/classes/: list_row.cpp  resource_entry.cpp
ResourcePacker/src/packing/: pack_maker.cpp  pack_manager.cpp  resource_file_entry.cpp
ResourcePacker/test/: CMakeLists.txt
ResourcePacker/test/src/: test.cpp
Resource_Packer/: CMakeLists.txt  resource_packer_todo.txt
Resource_Packer/src/: main.cpp
Resource_Packer/src/GUI/Include/: left_control_panel.hpp  main_frame.hpp  resource_entry.hpp  resource_list_panel.hpp  resource_manager.hpp  resource_sort_mode.hpp  status_panel.hpp  tool_tip_helper.hpp  top_bar.hpp
Resource_Packer/src/GUI/src/: left_control_panel.cpp  main_frame.cpp  resource_entry.cpp  resource_list_panel.cpp  resource_manager.cpp  status_panel.cpp  tool_tip_helper.cpp  top_bar.cpp
Test_Reader/: CMakeLists.txt
Test_Reader/src/: reader_test.cpp
